fix alignment bug

--- a/client/src/components/components.css
+++ b/client/src/components/components.css
@@ -67,13 +67,13 @@
 .gallery-images{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     gap: 0.2cm;
 }
 .contact{
     display: flex;
     flex-direction: column;
-    width:5.5cm;
+    width:8.5cm;
     padding:1cm;
     text-align: center;
     justify-content: space-between;
@@ -81,7 +81,7 @@
 .contact-us{
     display: flex;
     width: 100vw;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     text-align: center;
   
